Fixed inputs styles

--- a/src/app/modules/category/components/category-item/category-item.component.scss
+++ b/src/app/modules/category/components/category-item/category-item.component.scss
@@ -11,9 +11,14 @@
   }
   .icon {
     display: flex;
-    font-size: 28px;
+    font-size: 22px;
     text-align: center;
     margin-left: 10px;
+
+    i{
+      padding: 5px;
+      border-radius: 50%;
+    }
   }
 
   .title-wrapper {
