--- a/src/app/components/add-expence/add-expence.component.scss
+++ b/src/app/components/add-expence/add-expence.component.scss
@@ -6,7 +6,6 @@
   padding: 10px;
   overflow-x: hidden;
   
-
   .form-wrapper {
     position: relative;
     display: flex;
@@ -22,14 +21,15 @@
       margin-top: 40px;
     }
 
-    .name{
-      margin: 0 6px;
+    >*{
+      width: 50%;
     }
 
     .error-block{
       position: absolute;
       bottom: -20px;
     }
+
   }
 
   button {
@@ -54,8 +54,4 @@
       margin-right: 5px;
     }
   }
-}
-
-.ng-select {
-  width: 160px;
 }
