--- a/src/app/modules/inputs/components/input-number/input-number.component.html
+++ b/src/app/modules/inputs/components/input-number/input-number.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <span> <ng-content></ng-content></span>
-    <input class="form-field" type="text" placeholder="Enter to date" [value]="valNumber" (input)="handleInput($event)">
+    <input class="form-field" type="text" [placeholder]="placeholder" [value]="valNumber" (input)="handleInput($event)">
     <div *ngIf="!isValid" class="error-wrapper">
       <span class="error">Please enter to number</span>
   </div>
