--- a/src/app/modules/inputs/components/input-select/input-select.component.scss
+++ b/src/app/modules/inputs/components/input-select/input-select.component.scss
@@ -1,6 +1,14 @@
-.form-field ::ng-deep .ng-select.ng-select-single .ng-select-container {
-  width: 100px;
-}
-::ng-deep .ng-select.ng-select-single .ng-select-container {
-    width: 100px;
+::ng-deep .ng-select.form-field{
+  display: flex;
+  padding: 0;
+  max-width: inherit;
+
+  .ng-select-container {
+    min-width: 150px;
+    height: 100%;
+
+    .ng-value-container .ng-placeholder {
+      color: #CBD1DC;
+    }
+  }
 }
