Added expense header shadow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -74,7 +74,14 @@ li {
         font-size: 24px;
         font-weight: 700;
         text-align: center;
+        padding-bottom: 20px;
       }
+
+      .title-expence{
+        padding: 10px 0;
+            text-shadow: 1px 1px 3px #888;
+      }
+
     }
   }
 
