--- a/src/app/modules/category/components/add-category/add-category.component.html
+++ b/src/app/modules/category/components/add-category/add-category.component.html
@@ -3,7 +3,7 @@
 <div class="container" slot="body">
   <div class="form-category">
     <span>Choose icon category</span>
-    <app-category-icon-picker [formControl]="iconControl"></app-category-icon-picker>
+    <app-category-icon-picker class="icon-picker" [formControl]="iconControl"></app-category-icon-picker>
     <span *ngIf="iconControl.invalid && (iconControl.dirty ||iconControl.touched)">
       <div *ngIf="iconControl?.errors?.['required']">
         <span class="error">Please choose an icon</span> 
