--- a/src/app/modules/category/components/add-category/add-category.component.scss
+++ b/src/app/modules/category/components/add-category/add-category.component.scss
@@ -12,6 +12,10 @@
     flex-direction: column;
     align-items: center;
 
+    .icon-picker{
+      margin: 10px 0;
+    }
+
     i {
       font-size: 18px;
     }
