--- a/src/app/modules/inputs/components/input-select/input-select.component.scss
+++ b/src/app/modules/inputs/components/input-select/input-select.component.scss
@@ -3,6 +3,19 @@
   padding: 0;
   max-width: inherit;
 
+    .ng-dropdown-panel .ng-dropdown-panel-items .ng-option,
+    .ng-value-container{
+      span{
+        font-weight: 700;
+      }
+        i{
+          padding: 5px;
+          border-radius: 50%;
+          margin-right: 10px;
+        }
+    }
+
+
   .ng-select-container {
     min-width: 150px;
     height: 100%;
