Added styles for icon-picker

--- a/src/app/components/add-expence/add-expence.component.html
+++ b/src/app/components/add-expence/add-expence.component.html
@@ -1,5 +1,5 @@
 <app-modal-main>
-  <div class="name" slot="header">Add expence</div>
+  <div slot="header">Add expence</div>
   <div class="wrapper" slot="body">
     <div class="expence" [formGroup]="fullNameControl">
       <div class="form-wrapper">
