--- a/src/app/modules/category/components/add-category/add-category.component.scss
+++ b/src/app/modules/category/components/add-category/add-category.component.scss
@@ -9,24 +9,19 @@
 
   .form-category {
     display: flex;
-    flex-direction: column;
     align-items: center;
-
-    .icon-picker{
-      margin: 10px 0;
-    }
-
+    flex-direction: column;
+  
     i {
       font-size: 18px;
     }
     .error {
       color: red;
+      margin-bottom: 15px;
     }
   }
 
   .title {
-    font-size: 20px;
-    font-weight: 700;
-    margin: 20px 0;
+    font-size: 16px;
   }
 }
