Added confirm delete component for category

--- a/src/app/components/confirm-delete/confirm-delete.component.html
+++ b/src/app/components/confirm-delete/confirm-delete.component.html
@@ -1,7 +1,7 @@
 <app-modal-main>
   <div class="name" slot="header">Are you shore about this?</div>
   <div class="wrapper" slot="body">
-    If you delete expence, you will not be able to restore it!
+    If you delete this item, you will not be able to restore it!
   </div>
   <div class="actions" slot="footer">
     <app-btn-negative class="m-r-auto" (click)="ref.close()">
