--- a/src/app/modules/category/components/category-item/category-item.component.html
+++ b/src/app/modules/category/components/category-item/category-item.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper-list">
   <div class="item">
     <div class="icon-wrapper">
-      <span class="icon"><i [class]="itemCategory.icon" [ngStyle]="{color: itemCategory.color, background: itemCategory.color | iconBackgroundColor}"></i></span>
+      <span class="icon"><i [class]="itemCategory.icon" [ngStyle]="{color: itemCategory.color, borderColor: itemCategory.color, background: itemCategory.color | iconBackgroundColor}"></i></span>
     </div>
     <div class="title-wrapper">
       <span class="name">{{ itemCategory.name }}</span>
