--- a/src/app/modules/category/components/category-item/category-item.component.scss
+++ b/src/app/modules/category/components/category-item/category-item.component.scss
@@ -14,10 +14,12 @@
     font-size: 22px;
     text-align: center;
     margin-left: 10px;
-
+  
     i{
       padding: 5px;
       border-radius: 50%;
+      border-width: 1px;
+      border-style: solid;
     }
   }
 
