--- a/src/app/modules/category/components/category-icon-picker/category-icon-picker.component.scss
+++ b/src/app/modules/category/components/category-icon-picker/category-icon-picker.component.scss
@@ -4,11 +4,13 @@
   height: auto;
   padding: 10px 0;
   border-radius: 10px;
-  border: 1px solid #888;
+  border-width: 2px;
+  border-style: solid;
   cursor: pointer;
   transition: 150ms;
   color: #7dc653;
   font-weight: 700;
+
 
   i{
     font-size: 18px;
