--- a/src/app/modules/inputs/components/input-select/input-select.component.scss
+++ b/src/app/modules/inputs/components/input-select/input-select.component.scss
@@ -1,27 +1,37 @@
-::ng-deep .ng-select.form-field{
+::ng-deep .ng-select.form-field {
   display: flex;
   padding: 0;
   max-width: inherit;
 
-    .ng-dropdown-panel .ng-dropdown-panel-items .ng-option,
-    .ng-value-container{
-      span{
-        font-weight: 700;
-      }
-        i{
-          padding: 5px;
-          border-radius: 50%;
-          margin-right: 10px;
-        }
+  .ng-dropdown-panel .ng-dropdown-panel-items .ng-option,
+  .ng-value-container {
+    .ng-value-label{
+      display: flex;
+      align-items: center;
+      font-weight: 700;
     }
-
+    .ng-option-label {
+      display: flex;
+      align-items: center;
+      font-weight: 700;
+    }
+    i {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+  }
 
   .ng-select-container {
     min-width: 150px;
     height: 100%;
 
     .ng-value-container .ng-placeholder {
-      color: #CBD1DC;
+      color: #cbd1dc;
     }
   }
 }
