Refactored storage data structure

--- a/src/app/components/add-expence/add-expence.component.html
+++ b/src/app/components/add-expence/add-expence.component.html
@@ -26,10 +26,10 @@
             "
           >
             <div *ngIf="priceControl?.errors?.['required']">
-              <span class="error-amount">Please enter to date</span>
+              <app-error></app-error>
             </div>
             <div *ngIf="priceControl?.errors?.['min']">
-              <span class="error">Price cannot be less than zero</span>
+              <app-error text="Price cannot be less than zero"> </app-error>
             </div>
           </span>
         </div>
