--- a/src/app/modules/category/components/add-category/add-category.component.html
+++ b/src/app/modules/category/components/add-category/add-category.component.html
@@ -1,10 +1,11 @@
 <app-modal-main>
   <span slot="header">Enter new category</span>
 <div class="container" slot="body">
-  <span class="title" >Choose icon category</span>
+  
   <div class="form-category">
-
-    <app-category-icon-picker [formControl]="iconControl"></app-category-icon-picker>
+    <app-tooltip class="icon-picker" text="Choose icon category" direction="left">
+      <app-category-icon-picker [formControl]="iconControl"></app-category-icon-picker>
+    </app-tooltip>
 
     <span *ngIf="iconControl.invalid && (iconControl.dirty ||iconControl.touched)">
       <div class="error" *ngIf="iconControl?.errors?.['required']">
@@ -15,6 +16,10 @@
     <app-input-text placeholder='Enter name category' [formControl]="nameControl">
       Category
     </app-input-text>
+  
+    
+
+    
 
     <span *ngIf="nameControl.invalid && (nameControl.dirty ||nameControl.touched)">
       <div class="error" *ngIf="nameControl?.errors?.['required']">
