--- a/src/app/modules/category/components/add-category/add-category.component.scss
+++ b/src/app/modules/category/components/add-category/add-category.component.scss
@@ -11,14 +11,19 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-  
+    
+    .icon-picker{
+      margin-bottom: 10px;
+    }
+
     i {
       font-size: 18px;
     }
     .error {
       color: red;
-      margin: 10px 0;
+      margin-bottom: 10px;
     }
+
   }
 
   .title {
