--- a/src/app/modules/shared/components/error/error.component.scss
+++ b/src/app/modules/shared/components/error/error.component.scss
@@ -1,9 +1,3 @@
-.error-wrapper {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    .error {
-      color: red;
-    }
-  }
-  
+:host{
+  color: red;
+}
