--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,14 @@
     <div class="wrapper-category">
       <app-tooltip text="Categories">
         <app-btn-icon (click)="openListCategory()">
-          <img src="../assets/config.png" />
+          <img src="assets/config.png" />
         </app-btn-icon>
       </app-tooltip>
     </div>
     <div class="wrapper-item">
       <app-tooltip text="Add to salary">
         <div class="item" (click)="addSalary()" id="budget">
-          <img src="../assets/wallet.png" />
+          <img src="assets/wallet.png" />
           <div class="money">
             <div class="title">Budget</div>
             <span>${{ budget }}</span>
