--- a/src/app/components/balance/balance.component.html
+++ b/src/app/components/balance/balance.component.html
@@ -1,4 +1,4 @@
-<img src="../assets/bagmoney.png" />
+<img src="assets/bagmoney.png" />
 <div class="money">
   <div class="title">Balance</div>
   <span [class.negative]="isNegative">${{ balance }}</span>
