--- a/src/app/components/expence-item/expence-item.component.html
+++ b/src/app/components/expence-item/expence-item.component.html
@@ -12,12 +12,12 @@
       <div class="actions">
         <app-tooltip text="Edit this item">
           <app-btn-icon (click)="editItem()">
-            <img src="../assets/edit.png" />
+            <img src="assets/edit.png" />
           </app-btn-icon>
         </app-tooltip>
         <app-tooltip text="Delete this item">
           <app-btn-icon (click)="removeItem()">
-            <img src="../assets/delete.png" />
+            <img src="assets/delete.png" />
           </app-btn-icon>
         </app-tooltip>
       </div>
