--- a/src/app/modules/category/components/category-item/category-item.component.html
+++ b/src/app/modules/category/components/category-item/category-item.component.html
@@ -9,12 +9,12 @@
     <div class="action">
       <app-tooltip text="Edit" direction="left">
         <app-btn-icon (click)="editItem()">
-          <img src="../assets/edit.png" />
+          <img src="assets/edit.png" />
         </app-btn-icon>
       </app-tooltip>
       <app-tooltip text="Delete" direction="left">
         <app-btn-icon (click)="removeItem()">
-          <img src="../assets/delete.png" alt="" />
+          <img src="assets/delete.png" alt="" />
         </app-btn-icon>
       </app-tooltip>
     </div>
