--- a/src/app/modules/bulk/components/check-box-bulk/check-box-bulk.component.html
+++ b/src/app/modules/bulk/components/check-box-bulk/check-box-bulk.component.html
@@ -1,3 +1,4 @@
 <div class="info-checked">
-    <input type="checkbox" (change)="checked()" [checked]="isCheckedAll" />
+	<app-input-checkbox [formControl]="checkedControl"></app-input-checkbox>
+	<!-- <input type="checkbox" (change)="checked()" [checked]="isCheckedAll" /> -->
 </div>
