--- a/src/app/modules/inputs/components/input-checkbox/input-checkbox.component.html
+++ b/src/app/modules/inputs/components/input-checkbox/input-checkbox.component.html
@@ -1,2 +1,6 @@
-
-
+<div class="checkbox bounce">
+	<input type="checkbox" [checked]="val" (change)="handleInput()"/>
+	<svg viewBox="0 0 29 29">
+		<polyline points="5 10.75 8.5 14.25 16 6"></polyline>
+	</svg>
+</div>
