--- a/src/app/modules/shared/components/dots/dots.component.scss
+++ b/src/app/modules/shared/components/dots/dots.component.scss
@@ -4,9 +4,18 @@
 	align-items: center;
 
 	.icon {
+        display: flex;
+        align-items: center;
         margin-right: 30px;
 		position: relative;
 		cursor: pointer;
+        transition: 150ms;
+        border-radius: 15px;
+
+
+        &:hover{
+            background-color: #C0C0C0;
+        }
 	}
 
 	ul {
@@ -29,13 +38,19 @@
         }
 
         li{
-            transition: color 150ms;
+            margin: 5px 0;
+            padding: 5px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 15px;
+            transition: background-color 150ms;
             .text{
                 font-size: 14px;
             }
         
             &:hover{
-                color: #888;
+                background-color: #eee;
             }
         }
 	}
