--- a/src/app/components/expence-list/expence-list.component.scss
+++ b/src/app/components/expence-list/expence-list.component.scss
@@ -1,32 +1,40 @@
-:host{
-  overflow-y: auto;
-  overflow-x: hidden;
-  max-height: 350px;
-  padding-top: 20px;
+:host {
+	overflow-y: auto;
+	overflow-x: hidden;
+	max-height: 350px;
+	padding-top: 20px;
 }
 
-.date-wrapper{
-  display: flex;
+.date-wrapper {
+	display: flex;
 
-  .day{
-    margin-left: 10px;
-    color: #888;
-  }
+	.day {
+		margin-left: 10px;
+		color: #888;
+	}
 }
 
 ul {
-  margin: 10px 0;
-  padding: 0;
-  padding: 15px;
+	margin: 10px 0;
+	padding: 0;
+	padding: 15px;
 }
 
 .loggs {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 
-  .item{
-    width: 100%;
-    padding: 10px 0px;
-    border-radius: 25px;
-  }
+	.item {
+		width: 100%;
+		padding: 10px 0px;
+		border-radius: 25px;
+	}
+}
+
+.cdk-drop-list-dragging .cdk-drag {
+	transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drag-animating{
+  transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
