Refactored with ngRx

--- a/src/app/modules/category/components/category-view/category-view.component.html
+++ b/src/app/modules/category/components/category-view/category-view.component.html
@@ -1,4 +1,4 @@
-<app-tooltip text="{{ category.name }}">
+<app-tooltip text="{{ text }}">
   <div
     class="category-wrapper"
     [ngStyle]="{ background: category.color | iconBackgroundColor }"
