--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -56,7 +56,7 @@ li {
 
     .wrapper-category {
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       margin-bottom: 10px;
 
       img {
@@ -84,7 +84,7 @@ li {
       }
       .wrapper-actions{
           display: flex;
-          justify-content: end;
+          justify-content: flex-end;
           img {
             margin: 0 5px;
             width: 15px;
